--- a/.github/workflows/migrate-to-gha.yml
+++ b/.github/workflows/migrate-to-gha.yml
@@ -26,18 +26,13 @@ jobs:
             exit 1
           fi
 
-      - name: Transformar con Groq
-        if: steps.find-files.outputs.files != ''
+      - name: Ejecutar migración con Groq
         env:
           GROQ_API_KEY: ${{ secrets.GROQ_API_KEY }}
-          GROQ_MODEL: deepseek-coder-v2-lite
-          REPO_NAME: ${{ matrix.config.repo }}
-          BRANCH_NAME: ${{ matrix.config.branch }}
-          FILES_TO_MIGRATE: ${{ steps.find-files.outputs.files }}
-          TYPE: ${{ matrix.config.type }}
+          GROQ_MODEL: llama-3.1-70b-versatile
         run: |
-          chmod +x ./scripts/migrate-with-ai.sh
-          ./scripts/migrate-with-ai.sh
+                  chmod +x ./scripts/migrate-with-ai.sh
+                  ./scripts/migrate-with-ai.sh
 
       - name: Subir resultados como Artifacts
         if: always()
