--- a/.github/workflows/migrate-to-gha.yml
+++ b/.github/workflows/migrate-to-gha.yml
@@ -72,7 +72,12 @@ jobs:
       matrix:
         config: ${{ fromJson(needs.generate-matrix.outputs.matrix) }}
     steps:
-      - name: Checkout origen
+      - name: Checkout THIS repo (for the migration script)
+        uses: actions/checkout@v4
+        with:
+          path: migration-repo
+
+      - name: Checkout source repo
         uses: actions/checkout@v4
         with:
           repository: ${{ matrix.config.repo }}
@@ -92,6 +97,7 @@ jobs:
 
       - name: Transformar con Groq
         if: steps.find-files.outputs.files != ''
+        working-directory: migration-repo
         env:
           GROQ_API_KEY: ${{ secrets.GROQ_API_KEY }}
           GROQ_MODEL: deepseek-coder-v2-lite
@@ -108,5 +114,5 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: migrated-${{ matrix.config.repo }}-${{ matrix.config.branch }}
-          path: migrated/**
+          path: migration-repo/migrated/**
           retention-days: 7
